--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-reveal": "^1.2.2",
     "react-scripts": "4.0.3",
     "react-typical": "^0.1.3",
+    "styled-components": "^5.3.0",
     "typescript": "^4.3.2",
     "web-vitals": "^1.1.2"
   },
