--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "antd": "^4.16.2",
     "apollo-boost": "^0.4.9",
     "graphql": "^15.5.0",
+    "jquery": "^3.6.0",
+    "particles-bg": "^2.5.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-reveal": "^1.2.2",
