--- a/package.json
+++ b/package.json
@@ -18,21 +18,27 @@
     "@types/react-dom": "^17.0.5",
     "antd": "^4.16.2",
     "apollo-boost": "^0.4.9",
-    "graphql": "^15.5.0",
-    "jquery": "^3.6.0",
-    "particles-bg": "^2.5.5",
+    "axios": "^0.21.1",
     "emailjs-com": "^2.6.4",
     "formik": "^2.2.9",
+    "graphql": "^15.5.0",
+    "jquery": "^3.6.0",
+    "jsonwebtoken": "^8.5.1",
+    "moment": "^2.29.1",
+    "particles-bg": "^2.5.5",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react-dom": "^17.0.2",    
     "react-reveal": "^1.2.2",
+    "react-router-dom": "^5.2.0",
+    "react-router-redux": "^4.0.8",
     "react-scripts": "4.0.3",
     "react-tooltip": "^4.2.21",
     "react-typical": "^0.1.3",
     "sass-loader": "^12.0.0",
     "styled-components": "^5.3.0",
     "typescript": "^4.3.2",
-    "web-vitals": "^1.1.2"
+    "web-vitals": "^1.1.2",
+    "wpapi": "^1.2.2"
   },
   "scripts": {
     "start": "react-scripts start",
