--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "moment": "^2.29.1",
     "particles-bg": "^2.5.5",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2",    
+    "react-dom": "^17.0.2",
+    "react-icons": "^4.2.0",
     "react-reveal": "^1.2.2",
     "react-router-dom": "^5.2.0",
     "react-router-redux": "^4.0.8",
