--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/node": "^12.20.13",
     "@types/react": "^17.0.8",
     "@types/react-dom": "^17.0.5",
+    "@types/react-scroll": "^1.8.3",
     "antd": "^4.16.2",
     "apollo-boost": "^0.4.9",
     "axios": "^0.21.1",
@@ -33,6 +34,7 @@
     "react-router-dom": "^5.2.0",
     "react-router-redux": "^4.0.8",
     "react-scripts": "4.0.3",
+    "react-scroll": "^1.8.3",
     "react-tooltip": "^4.2.21",
     "react-typical": "^0.1.3",
     "sass-loader": "^12.0.0",
